--- a/assets/views/FeedView.less
+++ b/assets/views/FeedView.less
@@ -31,6 +31,19 @@
     }
 }
 
+.pagination {
+    max-width: var(--layout-max-width);
+    margin: 0 auto;
+
+    display: flex;
+    justify-content: space-around;
+
+    a {
+        display: block;
+        padding: 1em 3em; /* Big click area */
+    }
+}
+
 .footer-tools {
     max-width: var(--layout-max-width);
     margin: 0 auto;
