Inject <script nonce> everywhere

--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -12,8 +12,8 @@
         <link rel="apple-touch-icon-precomposed" type="image/png" href="{% static 'icon-*.png'|newest_static %}">
         <link rel="manifest" href="{% url 'manifest' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'main-*.css'|newest_static %}">
-        <script src="{% static 'runtime-*.js'|newest_static %}" defer></script>
-        <script src="{% static 'main-*.js'|newest_static %}" defer></script>
+        <script src="{% static 'runtime-*.js'|newest_static %}" defer nonce="{{ script_nonce }}"></script>
+        <script src="{% static 'main-*.js'|newest_static %}" defer nonce="{{ script_nonce }}"></script>
     </head>
     <body>
         {% include "icons.html" %}
