--- a/yarrharr/templates/header.html
+++ b/yarrharr/templates/header.html
@@ -29,7 +29,7 @@
 
 </div>
 
-<script type="module">
+<script type="module" nonce="{{ script_nonce }}">
   const b = document.getElementById("layout-button");
   const y = document.getElementById("yarrharr");
 
@@ -60,7 +60,7 @@
   readFromStorage();
 </script>
 
-<script type="module">
+<script type="module" nonce="{{ script_nonce }}">
   const b = document.getElementById("fullscreen-button");
   b.onclick = e =>  {
     if (document.fullscreenElement) {
