--- a/assets/base.less
+++ b/assets/base.less
@@ -48,7 +48,6 @@
 
 html {
     line-height: 1.4;
-    font-size: small;
     font-family: sans-serif;
     margin: 0;
     padding: 0;
@@ -60,7 +59,7 @@ html {
 
 a {
     color: var(--text-color);
-    --underline-color: rgb(28, 140, 199);
+    --underline-color: var(--text-color);
     text-decoration-line: none;
 }
 a:not(.no-underline),
