Rearrange .less imports

--- a/assets/base.less
+++ b/assets/base.less
@@ -328,3 +328,12 @@ footer {
     background: var(--footer-background-color);
     color: var(--footer-text-color);
 }
+
+@import "./widgets/Article.less";
+@import "./widgets/GlobalBar.less";
+@import "./widgets/icons.less";
+@import "./widgets/ListArticle.less";
+@import "./widgets/StateToggle.less";
+@import "./widgets/Tabs.less";
+@import "./views/FeedView.less";
+@import "./views/inventory.less";
