Fix missing var()

--- a/assets/base.less
+++ b/assets/base.less
@@ -215,7 +215,7 @@ select[multiple] {
 
 .about-page {
     .about-page-inner {
-        max-width: --layout-max-width;
+        max-width: var(--layout-max-width);
         margin: 0 auto;
         padding: 1px 0 1px 0; /* disable margin collapsing */
     }
