Drop contain: style
Firefox doesn't support it and warns in the console.

--- a/assets/base.less
+++ b/assets/base.less
@@ -228,7 +228,7 @@ select[multiple] {
     max-width: var(--layout-max-width);
     margin: 0 auto;
     line-height: @bar_line_height;
-    contain: size layout style;
+    contain: size layout;
 
     & > a[href],
     & > button {
