Fix flex-flow syntax

--- a/assets/widgets/ListArticle.less
+++ b/assets/widgets/ListArticle.less
@@ -88,7 +88,7 @@
     .view-link {
         font-size: @icon_size;
         display: flex;
-        flex: row nowrap;
+        flex-flow: row nowrap;
         align-items: center;
         justify-content: center;
 
