Reorganize .less files

--- a/less/main.less
+++ b/less/main.less
@@ -328,11 +328,11 @@ footer {
     color: var(--footer-text-color);
 }
 
-@import "./widgets/Article.less";
-@import "./widgets/GlobalBar.less";
-@import "./widgets/icons.less";
-@import "./widgets/ListArticle.less";
-@import "./widgets/StateToggle.less";
-@import "./widgets/Tabs.less";
-@import "./views/FeedView.less";
-@import "./views/inventory.less";
+@import "./Article.less";
+@import "./GlobalBar.less";
+@import "./icons.less";
+@import "./ListArticle.less";
+@import "./StateToggle.less";
+@import "./Tabs.less";
+@import "./FeedView.less";
+@import "./inventory.less";
