Rough switch to Newsread for body copy

--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -12,6 +12,7 @@
         <link rel="apple-touch-icon-precomposed" type="image/png" href="{% static 'icon-*.png'|newest_static %}">
         <link rel="manifest" href="{% url 'manifest' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'normalize-*.css'|newest_static %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'fonts-*.css'|newest_static %}">
         <link rel="stylesheet" type="text/css" href="{% static 'main-*.css'|newest_static %}">
     </head>
     <body>
