--- a/less/Article.less
+++ b/less/Article.less
@@ -13,19 +13,6 @@ article {
         max-width: var(--layout-max-width);
     }
 
-    /* NB: This is written so that it can't affect <h1> tags within .content */
-    & > h1 {
-        font: normal 1.125rem / 1.5rem sans-serif;
-        margin-bottom: 0.67em;
-        padding-top: 0.75rem;
-        padding-bottom: 0.125rem;
-
-        a {
-            display: grid;
-            grid-template-columns: 1fr 1em; /* push icon to the far right */
-        }
-    }
-
     .meta {
         text-transform: uppercase;
         font-size: smaller;
@@ -36,14 +23,17 @@ article {
     }
 
     .content {
+        font: normal 1.2rem / 1.7 "Newsreader";
+
         h1, h2, h3, h4, h5, h6, p, blockquote {
             margin: 0;
             padding: 0;
         }
         h1, h2, h3, h4, h5, h6 {
             font: inherit;
-            font-weight: bold;
-            margin: 0.75rem 0;
+            font-weight: 500;
+            margin: 1.75rem 0 0.75rem 0;
+            font-variation-settings: "opsz" 60;
         }
 
         p {
