--- a/less/FeedView.less
+++ b/less/FeedView.less
@@ -12,6 +12,9 @@
         hyphens: auto;
         font-size: 1.5rem;
         margin: 1rem 0;
+        font-family: "Newsreader";
+        font-weight: 350;
+        font-variation-settings: "opsz" 72;
     }
 
     .header-tools {
