Restore .count styling

--- a/less/Tabs.less
+++ b/less/Tabs.less
@@ -56,3 +56,12 @@
         margin-right: 0;
     }
 }
+
+.tabs-tabs .count {
+    font-size: 0.7em;
+    background: rgba(127, 127, 127, 0.3);
+    padding: 0.25em 0.5em;
+    border-radius: 2em;
+    position: relative;
+    top: -0.25em;
+}
