--- a/yarrharr/templates/label_list.html
+++ b/yarrharr/templates/label_list.html
@@ -37,7 +37,7 @@
           <use xlink:href="#icon-label"></use>
         </svg>
       </td>
-      <td><a href="{% url 'label-show' label.id 'unread' %}">{{ label.text }}</a></td>
+      <td><a class="no-underline" href="{% url 'label-show' label.id 'unread' %}">{{ label.text }}</a></td>
       <td>{{ label.feeds.count }}</td>
       <td>{{ label.unread_count }}</a></td>
       <td><a href="{% url 'label-show' label.id 'fave' %}">{{ label.fave_count }}</a></td>
