--- a/less/main.less
+++ b/less/main.less
@@ -46,8 +46,7 @@
 }
 
 html {
-    line-height: 1.4;
-    font-family: sans-serif;
+    font: normal 18px / 1.4 "Newsreader", serif;
     margin: 0;
     padding: 0;
     overflow-y: scroll;
@@ -71,7 +70,7 @@ a[role=button] {
     text-decoration-line: none;
 }
 a:visited {
-    --underline-color: rgb(199, 68, 28); // TODO Make this more vibrant
+    text-decoration-style: dashed;
 }
 a:visited {
     color: var(--text-color);
@@ -90,7 +89,9 @@ main {
 }
 
 h1 {
-    font-weight: normal;
+    font: 350 2.0rem / 1.4 "Newsreader", serif;
+    font-variation-settings: "opsz" 72;
+    hyphens: auto;
 }
 
 :focus-visible {
@@ -107,8 +108,7 @@ h1 {
     width: 100%;
     height: 2.5rem;
     padding: 0 @text_padding;
-    font: inherit;
-    line-height: 2.1rem;
+    font: normal 0.9rem / 2.1rem sans-serif;
 }
 
 label:not(.checkbox) {
