Fix <title> on label page

--- a/yarrharr/templates/label_show.html
+++ b/yarrharr/templates/label_show.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ label.title }}{% endblock %}
+{% block title %}{{ label.text }}{% endblock %}
 
 {% block content %}
 <div id="yarrharr" class="layout-narrow">
