--- a/less/Article.less
+++ b/less/Article.less
@@ -50,8 +50,9 @@ article {
         }
 
         hr {
-            margin: 1rem 2rem;
-            border: 0.3125rem solid var(--quiet-text-color);
+            margin: 1rem 0;
+            border: 0 solid var(--quiet-text-color);
+            border-width: 1.5px 0 0 0;
         }
 
         pre {
