--- a/yarrharr/templates/icons.html
+++ b/yarrharr/templates/icons.html
@@ -73,5 +73,9 @@
     <symbol id="icon-narrow" viewBox="0 0 20 20">
       <path d="M 8.5 10 L 1.5 10 M 3.5 5 L 8.5 10 L 3.5 15M 11.5 10 L 18.5 10 M 16.5 5 L 11.5 10 L 16.5 15" fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" />
     </symbol>
+    <symbol id="icon-video" viewBox="0 0 20 20">
+      <circle cx="10" cy="10" r="9" fill="currentColor" />
+      <path d="M 7 5 L 7 15 L 16 10" fill="white" />
+    </symbol>
   </defs>
 </svg>
