Style title text

--- a/less/Article.less
+++ b/less/Article.less
@@ -59,6 +59,12 @@ article {
             white-space: pre-wrap;
         }
 
+        /* <img src="...">
+         * <aside class="title-text">xkcd tooltip</aside> */
+        aside.title-text {
+            font-style: italic;
+        }
+
         /* <a href=... class=youtube-thumb>
          *    <img src=thumbnail>
          *    <svg><!-- icon --></svg>
