Use selectors that can't collide with content
Style the chrome <main> and <footer> elements with rules that can't
match elements that appear in feed content due to sanitization.

Closes #358.

--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -18,10 +18,10 @@
     <body>
         {% include "icons.html" %}
 
-        <main role=main>
+        <main id="main">
             {% block content %}{% endblock %}
         </main>
-        <footer>
+        <footer id="footer">
             {% if user.is_authenticated %}
                 <p><a href="{% url 'home' %}">Home</a> ∙ <a href="{% url 'logout' %}">Log out</a>
             {% endif %}
