--- a/less/main.less
+++ b/less/main.less
@@ -96,7 +96,7 @@ a:visited[aria-disabled=true] {
     cursor: default;
 }
 
-main {
+#main {
     min-height: 100vh; /* push the footer off the page */
 }
 
@@ -333,7 +333,7 @@ form.small-form {
     }
 }
 
-footer {
+#footer {
     padding: 3em 0.25em;
     text-align: center;
     background: var(--footer-background-color);
