♥ and ✓ button focus styles

--- a/less/StateToggle.less
+++ b/less/StateToggle.less
@@ -1,4 +1,9 @@
 fave-toggle {
+    button {
+        .flat-button;
+        padding: 1px 4px;
+    }
+
     .inactive {
         fill: var(--icon-color-off);
     }
@@ -16,6 +21,11 @@ fave-toggle {
 }
 
 read-toggle {
+    button {
+        .flat-button;
+        padding: 1px 4px;
+    }
+
     .inactive {
         fill: var(--icon-color-off);
     }
