--- a/yarrharr/templates/article_show.html
+++ b/yarrharr/templates/article_show.html
@@ -7,20 +7,12 @@
 
   {% include "header.html" %}
 
-  <div class="feed-header">
-    <h1>{{ article.title|default:"Untitled" }}</h1>
-    <div class=header-tools>
-      <fave-toggle article-id="{{ article.id }}" {{ article.fave|yesno:"checked," }}></fave-toggle>
-      <read-toggle article-id="{{ article.id }}" {{ article.read|yesno:"checked," }}></read-toggle>
-    </div>
-  </div>
+  <div class=prop-sticky>
+    <article>
+      <h1>{{ article.title|default:"Untitled" }}</h1>
 
-  <div class=article-view>
-    <div class=prop-sticky>
-
-      <article>
+      <div class=article-header>
         <div class="meta">
-          {# TODO: Link back should include this article ID #}
           From <a href="{% url 'feed-show' article.feed.id 'unread' %}">{{ article.feed.title }}</a>
           {% if article.author %}
           — {{ article.author }}
@@ -28,28 +20,31 @@
           {% if article_labels %}
           — in
           {% for label in article_labels %}
-          {# TODO: Link back should include this article ID #}
           <a href="{% url 'label-show' label.id 'unread' %}">{{ label.text }}</a>{% if not forloop.last %},{% endif %}
           {% endfor %}
           {% endif %}
-        </div>
-        <div class="meta">
+          <br>
           {{ article.date }}
           — <a href="{{ article.url }}" target="_blank">
             Original site
-            <svg width="1em" height="1em" aria-hidden="true" class="icon">
-              <use xlink:href="#icon-outbound"></use></svg>
+            <svg width="1em" height="1em" aria-hidden="true" class="icon"><use xlink:href="#icon-outbound"></use></svg>
           </a>
         </div>
-        <div class="content">{{ article.content|safe }}</div>
-      </article>
+        <div class="tools">
+          <fave-toggle article-id="{{ article.id }}" {{ article.fave|yesno:"checked," }}></fave-toggle>
+          <read-toggle article-id="{{ article.id }}" {{ article.read|yesno:"checked," }}></read-toggle>
+        </div>
+      </div>
 
-      <div class="footer-tools">
+      <div class="content">{{ article.content|safe }}</div>
+
+      <div class="article-footer">
         <fave-toggle article-id="{{ article.id }}" {{ article.fave|yesno:"checked," }}></fave-toggle>
         <read-toggle article-id="{{ article.id }}" {{ article.read|yesno:"checked," }}></read-toggle>
       </div>
 
-    </div>
+    </article>
+
   </div>
 
 </div>
