--- a/less/include.less
+++ b/less/include.less
@@ -4,17 +4,6 @@
  * This file must not contain any concrete styles.
  */
 
-/* There is always this much padding between text and the edge of stuff. */
-@text_padding: 0.25rem;
-
-/* Buttons have thick borders, also used to indicate focus. */
-@button_border_width: 2px;
-
-@icon_size: 2.0rem;
-
-@bar_line_height: 1.25rem;
-@bar_height: calc(2 * @bar_line_height + 2 * @text_padding + 2 * @button_border_width);
-
 .flat-button() {
     box-sizing: border-box;
     border: none;
@@ -25,6 +14,6 @@
 
     &:focus-visible {
         outline: transparent;
-        box-shadow: inset 0 0 0 @button_border_width var(--focus-color);
+        box-shadow: inset 0 0 0 var(--button-border-width) var(--focus-color);
     }
 }
