--- a/less/main.less
+++ b/less/main.less
@@ -4,7 +4,7 @@
 @import "./include.less";
 
 :root {
-    // Column width whenever a narrow layout is desired.
+    /* Column width whenever a narrow layout is desired. */
     --layout-max-width: 50rem;
 
     --background-color: white;
@@ -26,6 +26,16 @@
 
     --font-wdth-mono: 100;
     --font-weight-mono: 400;
+
+    /* There is always this much padding between text and the edge of stuff. */
+    --text-padding: 0.25rem;
+
+    /* Buttons have thick borders, also used to indicate focus. */
+    --button-border-width: 2px;
+
+    --icon-size: 2.0rem;
+    --bar-line-height: 1.25rem;
+    --bar-height: calc(2 * var(--bar-line-height) + 2 * var(--text-padding) + 2 * var(--button-border-width));
 }
 
 @media screen and (prefers-color-scheme: dark) {
@@ -119,7 +129,7 @@ h1 {
     box-sizing: border-box;
     width: 100%;
     height: 2.5rem;
-    padding: 0 @text_padding;
+    padding: 0 var(--text-padding);
     font: normal 0.9rem / 2.1rem sans-serif;
 }
 
@@ -146,7 +156,7 @@ select[multiple] {
 
     color: var(--text-color);
     background: var(--background-color);
-    border: @button_border_width solid var(--border-color);
+    border: var(--button-border-width) solid var(--border-color);
     transition: border-color 0.05s;
 
     &:focus {
@@ -176,8 +186,8 @@ select[multiple] {
 
     color: var(--text-color);
     background: linear-gradient(to bottom, var(--gradient-start) 0%, var(--gradient-mid) 28%, var(--gradient-end) 100%);
-    border: @button_border_width solid var(--gradient-border-color);
-    border-radius: (1.5 * @text_padding);
+    border: var(--button-border-width) solid var(--gradient-border-color);
+    border-radius: calc(1.5 * var(--text-padding));
     transition: border-color 0.05s;
 
     text-shadow: var(--gradient-border-color) 0 0 .025rem; /* bump contrast */
@@ -236,10 +246,10 @@ select[multiple] {
 .bar {
     display: flex;
     justify-content: space-between;
-    height: @bar_height;
+    height: var(--bar-height);
     max-width: var(--layout-max-width);
     margin: 0 auto;
-    line-height: @bar_line_height;
+    line-height: var(--bar-line-height);
     contain: size layout;
 
     & > a[href],
@@ -256,12 +266,12 @@ select[multiple] {
 
     & > * > .icon {
         display: block;
-        font-size: @icon_size;
+        font-size: var(--icon-size);
     }
 
     & > .square,
     & > .expand > .square {
-        flex: 0 0 @bar_height;
+        flex: 0 0 var(--bar-height);
         display: flex;
         align-items: center;
         justify-content: center;
@@ -269,13 +279,13 @@ select[multiple] {
 
     & > .expand {
         flex: 1 1 0;
-        min-width: @bar_height; /* allow shrinking below content size */
+        min-width: var(--bar-height); /* allow shrinking below content size */
     }
 
     & > .header {
         justify-content: start;
         white-space: nowrap;
-        text-overflow: ellipsis; // TODO: get ellipsis working here.
+        text-overflow: ellipsis; /* TODO: get ellipsis working here. */
         overflow: hidden;
     }
 }
