Convert the .flat-button mixin

--- a/less/ListArticle.less
+++ b/less/ListArticle.less
@@ -1,11 +1,8 @@
-@import "./include.less";
-
 .list-article {
     margin: 0.75rem 0;
 }
 
 .list-article-inner {
-    // max-width: var(--layout-max-width);
     margin: 0 auto;
     overflow: hidden;
 }
@@ -14,14 +11,14 @@
     display: flex;
     flex-flow: row nowrap;
     align-items: stretch;
+    --focus-offset: var(--focus-offset-in); /* Don't clip focus ring. */
 
     .outbound {
-        .flat-button;
         padding: calc(2 * var(--button-border-width));
         flex: 1 1 100%;
         width: 100%;
         display: grid;
-        // XXX: Using grid here is starting to look a little silly.
+        /* XXX: Using grid here is starting to look a little silly. */
         grid-template-areas:
             "meta1"
             "meta2";
@@ -37,12 +34,10 @@
             color: var(--quiet-text-color);
             text-transform: uppercase;
             font-size: smaller;
-            // background: red;
         }
         .meta2 {
             grid-area: meta2;
             font-family: "Newsreader";
-            // background: blue;
         }
         .meta1,
         .meta2 {
@@ -65,15 +60,12 @@
     }
     read-toggle {
         button {
-            .flat-button;
+            padding: 0;
             width: 100%;
             height: 100%;
         }
-        // background: purple;
     }
     .view-link {
-        // background: magenta;
-        .flat-button;
     }
 
     .outbound-icon,
@@ -87,7 +79,6 @@
 
         .icon {
             flex: 0 0 auto;
-            // background: white;
             display: block;
             align-self: center;
             justify-self: center;
