--- a/less/StateToggle.less
+++ b/less/StateToggle.less
@@ -1,6 +1,8 @@
 fave-toggle {
     button {
-        .flat-button;
+        box-sizing: border-box;
+        background: transparent;
+        border: none;
         padding: 1px 4px;
     }
 
@@ -22,7 +24,9 @@ fave-toggle {
 
 read-toggle {
     button {
-        .flat-button;
+        box-sizing: border-box;
+        background: transparent;
+        border: none;
         padding: 1px 4px;
     }
 
