--- a/less/GlobalBar.less
+++ b/less/GlobalBar.less
@@ -1,5 +1,3 @@
-@import "./include.less";
-
 .yarrharr-masthead {
     display: flex;
     flex: 0 0 auto;
@@ -36,8 +34,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
-    .flat-button;
-
+    --focus-offset: var(--focus-offset-in); /* Don't clip focus ring. */
     padding: 1rem; /* Ensure spacing between */
 }
