--- a/less/Tabs.less
+++ b/less/Tabs.less
@@ -1,5 +1,3 @@
-@import "./include.less";
-
 /**
  * <div.tabs>
  *   <div.tabs-tabs>
@@ -29,7 +27,7 @@
     border-radius: 4px 4px 0 0;
     text-decoration: none;
     line-height: 1.7;
-    padding: 0.125rem 8px 0 8px;
+    padding: 0.125rem 8px 2px 8px;
     white-space: nowrap;
     text-align: center;
     text-overflow: ellipsis;
