--- a/css/main.css
+++ b/css/main.css
@@ -54,8 +54,9 @@
         --icon-color: #eee;
         --icon-color-off: #666;
 
-        // Invert the logo image so that it is legible in the dark theme. We
-        // don't go 100% because it is pretty bold.
+        /* Invert the logo image so that it is legible in the dark theme. We
+         * don't go 100% because it is pretty bold.
+         */
         --logo-filter: invert(90%);
 
         --font-weight-mono: 300;
@@ -102,7 +103,7 @@ a:visited {
     color: var(--text-color);
 }
 a:active {
-    --underline-color: rgb(185, 28, 199); // TODO Make this more vibrant
+    --underline-color: rgb(185, 28, 199); /* TODO Make this more vibrant */
 }
 a:link[aria-disabled=true],
 a:visited[aria-disabled=true] {
