--- a/css/Article.css
+++ b/css/Article.css
@@ -14,6 +14,7 @@
     .tools {
         display: flex;
         flex-flow: row nowrap;
+        --focus-offset: var(--focus-offset-in); /* Don't clip focus ring. */
 
         .icon {
             width: 2em;
